assets/scss/styles.scss
// Imports==========================================
@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700");
@import "reset";
@import "settings";
@import "grid";
@import "header";
@import "footer";


.whyNSI{
    @include flexContainer(row, flex-start, center)
    width: 100%;
    margin: 100px auto;
    padding: 0px 50px;
    display: flex;
    height: 550px;
    max-width: 1300px;

    .whyNSI__left{
        width: 50%;
        .whyNSI__left--title{
            text-transform: capitalize;
            font-weight: 600;
            padding-bottom: 25px;
        }
        .whyNSI__left--details{
            width: 80%;
            opacity: .5;
        }
    }
    .whyNSI__right{
        display: flex;
        align-items: center;
        width: 50%;
        .whyNSI__right--img{
            width: 100%;
            border-radius: 5px;
        }
    }
}
.mission{
    @include flexContainer(column, center, center);
    @include bgCover;
    padding: 100px 0;
    background: rgba(157, 156, 156, .1);
    .mission__title{
        text-align: center;
        font-weight: 600;
        margin-bottom: 20px;
    }
    .mission__details{
        text-align: center;
        opacity: .5;
        margin-bottom: 30px;
    }
    .mission__buttons{
        margin: 10px 20px;
        .mission__buttons--btn{
            margin: 0px 5px;
            padding: 10px 15px;
            background: rgb(22, 26, 34);
            border-radius: 5px;
            text-decoration: none;
            color: $white;
            transition: all .3s ease-in-out;
            &:hover{
                background: lighten($color: #32363D, $amount: 10%)
            }
            &.clear{
                color: #32363D;
                background: none;
                border: 2px solid rgba($color: #32363D, $alpha: 0.5);
            }
        }
    }
}
.our-team{
    @include flexContainer(column, center, center);
    width: 100%;
    padding: 50px 0;
    h2{
        font-weight: 600;
        text-transform: capitalize;
        margin-bottom: 30px;
    }
    .our-team__container{
        @include flexContainer(row, flex-start, flex-start);
        flex-wrap: wrap;
        max-width: 1200px;
        .our-team__container--left{
            width: 50%;
        }
        .our-team__container--right{
            width: 50%;
        }

        img{
            width: 192px;
            height: 280px;
            padding: 7px;
            object-fit: cover;
            object-position: center;
        }
        .our-team__container--pic-big{
            width: 388px;
            height: 400px;
        }
        .our-team__container--pic-tall{
            height: 400px;
        }
    }
}
.careers{
    width: 100%;
    height: 400px;
    margin: 50px 0;
    padding: 50px 50px 50px 0;
    display: flex;
    .careers__left{
        @include flexContainer(column, flex-end, center)
        width: 60%;
        .careers__employee-relative-container{
            position: relative;
            .careers__employee-container{
                width: 493px;
                height: 192px;
                display: flex;
                align-items: center;
                border: 1px solid rgba(128, 128, 128, 0.495);
                border-radius: 5px;
                -webkit-box-shadow: -6px 8px 19px 1px rgba(0,0,0,0.76); 
                box-shadow: -6px 8px 19px 1px rgba(0,0,0,0.76);
                z-index: 20;
                background: $white;
                &.front{
                    z-index: 0;
                    position: absolute;
                    bottom: 130px;
                    left: 70px;
                }
                .careers__employee{
                    padding: 20px;
                    height: 100%;
                    object-fit: cover;
                    object-position: center;
                    border-radius: 28px;
                    z-index: 0;
                    &.front{
                        z-index: 20;
                    }
                }
                .careers__employee--front{
                    padding: 20px;
                    height: 100%;
                    border-radius: 28px;
                    z-index: 0;
                }
                .careers__employee-details--name{
                    font-weight: 600;
                    padding-bottom: 10px;
                    z-index: 20;
                       &.front{
                        z-index: 0;
                    }
                }
                .careers__employee-details--title{
                    padding-bottom: 5px;
                    opacity: .5;
                    z-index: 20;
                       &.front{
                        z-index: 0;
                    }
                }
                .careers__employee-details--location{
                    font-weight: 600;
                    padding-bottom: 5px;
                    font-size: 0.9rem;
                    z-index: 20;
                       &.front{
                        z-index: 0;
                    }
                }
                .careers__employee-details--review{
                    padding-bottom: 5px;
                    font-size: 0.9rem;
                    opacity: .5;
                    z-index: 20;
                       &.front{
                        z-index: 0;
                    }
                    .fas{
                        z-index: 20;
                        color: red;
                           &.front{
                        z-index: 0;
                    }
                    }
                }
                .careers__employee-details--bubbles{
                    z-index: 20;
                    padding-top: 5px;
                    display: flex;
                       &.front{
                        z-index: 0;
                    }
                    .bubbles--green{
                        width: 140px;
                           &.front{
                        z-index: 0;
                    }
                    }
                    .bubbles--red{
                        z-index: 20;
                        width: 200px;
                        padding-left: 10px;
                           &.front{
                        z-index: 0;
                    }
                    }
                }
    
            }
        }
    }
    .careers__right{
        width: 40%;
        .careers__right--header{
            padding-bottom: 30px;
        }
        .careers__right--details{
            padding-bottom: 50px;
        }
        .careers__right--apply-btn{
            padding: 15px 20px;
            background: #161A22;
            color: $white;
            border: none;
            border-radius: 5px;
            cursor: pointer;
            transition: all .3s ease-in-out;
            &:hover{
                background: lighten($color: #32363D, $amount: 10%)
            }
        }

    }
}
@media only screen and (max-width: 900px){
    .whyNSI{
        flex-direction: column;
        margin: 50px auto;
        height: unset;
        width: 100vw;
        .whyNSI__left{
            @include flexContainer(column, center, center)
            width: 100vw;
            padding-bottom: 40px;
        }
        .whyNSI__right{
            width: 90vw;
        }
    }
    .mission{
        padding: 50px 0;
        margin-bottom: 70px;
        width: 100vw;
    }
    .our-team{
        display: none;

    }
    .careers{
        flex-direction: column;
        height: unset;
        padding-right: 20px;
        .careers__left{
            width: 100%;
            @include flexContainer(column, flex-start, flex-start);
            .careers__employee-relative-container{
                .careers__employee-container{
                    width: 270px;
                    height: 102px;
                    margin-left: 34px;
                    &.front{
                        bottom: 63px;
                        left: 36px;
                    }
                    .careers__employee{
                        padding: 13px;
                        border-radius: 20px;
                        &.front{

                        }
                    }
                    .careers__employee-details--name{
                        padding-bottom: 5px;
                    }
                    .careers__employee-details--location{
                        display: none;
                    }
                    .careers__employee-details--title{
                        display: none
                    }
                    .careers__employee-details--review{
                        font-size: 0.8rem;
                    }
                    .careers__employee-details--bubbles{
                        .bubbles--green{
                            width: 65px;
                            height: 12px;
                        }
                        .bubbles--red{
                            width: 100px;
                            height: 12px;
                        }
                    }
                }
            }
        }
        .careers__right{
            width: 100%;
            padding: 50px 20px;
            .careers__right--header{
                font-size: 2rem;
            }
        }
    }
}

